--- a/certo2.html
+++ b/certo2.html
@@ -39,13 +39,13 @@
 
 <script>
     function sim() {
-    alert("também te amo muuuuuiinntao, vamo no show do rammstein juntos?");
+    alert("xxxx");
     // redireciona para um URL após clicar no SIM
     location.href = "https://youtu.be/v7GMG1aLyPw";
 }
 
 function não() {
-    alert("belessa mano voce vai precisar de mim ainda belessa *emoji chorando*");
+    alert("xxx");
     // redireciona para um URL após clicar no NÃO
     location.href = "https://youtu.be/1OA6J8aTGuo";
 }
